--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,3 +478,116 @@ template {
 /*
  * Наш код пишем здесь
  */
+ *{
+   box-sizing: border-box;
+ }
+ html{
+   font-size: 16px;
+   font-family: "Roboto", sans-serif;/*просмтреть шрифты*/
+   overflow-y: scroll;
+   letter-spacing: 0.1em;
+ }
+
+a{
+  text-decoration: none;
+  color: #ffffff;
+}
+
+ .header{
+   position: relative;
+   min-height: 100vh;
+   background-color: #2d3651;
+   background-image: url(../img/img-header.png);
+   background-position: 50% 50%;
+   background-size: cover;
+   color: #ffffff;
+   padding: 100px 0;
+   display: grid;
+   align-content: center;
+ }
+
+ .header-overlay{
+   position: absolute;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   opacity: 0.8;
+   background-color: #2d3651;
+   
+ }
+ .header-menu{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  
+ }
+
+ .header-menu__container{
+   display: grid;
+   grid-template-columns: auto 1fr;
+   align-items: center;
+ }
+
+
+.header-menu__container,
+.header-content__container{
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 1340px ;
+  margin: auto;
+ }
+
+ .header-logo{
+  font-size: 1.5rem;
+  letter-spacing: 0.22em;
+ }
+
+ .header-logo__link{
+   display: block;
+  padding: 20px 20px 20px 0;
+ }
+
+ .header-logo__accent{
+    border: 3px solid #d63c29;
+    padding: 14px 1px 13px 5px;
+    display: inline-block;
+    margin-right: 4px;
+ }
+ .header-navbar{
+   display: grid;
+   justify-items: end;
+
+ }
+ .header-navbar__btn{
+   display: none;
+ }
+
+ .header-navbar__list{
+   width: 100%;
+   margin: 0 -20px 0 0;
+   padding: 0;
+   list-style: none;
+   display: grid;
+   justify-content: end;
+   grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+ }
+
+ .header-navbar__link{
+   font-size: 1.125rem;
+   padding: 20px;
+   display: block;
+ }
+
+ .header-content{
+  position: relative;
+  
+
+ }
+ .header-content__title{
+   margin: 0;
+ }
+
+
