--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,21 +498,47 @@ a{
   text-decoration: none;
   color: #ffffff;
 }
+
+.btn-accent,
 .btn{
-  border: 2px solid #ffffff;
-  min-width: 250px;
+  
+  
   height: 60px;
   display: block;
   text-align: center;
   font-size: 1.125rem;
   padding: 18px 20px;
-  background-color: rgba(255, 255, 255, 0.1);
+  
   letter-spacing: 0.1em;
   transition: background-color 0.5s;
 }
-.btn:hover{
+
+.btn{
+  border: 2px solid #ffffff;
+  min-width: 250px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.btn-accent{
+  border: 2px solid #2d3651;
+  min-width: 350px;
+  background-color: rgba(45, 54, 81, 0.8);
+}
+
+.btn:hover,
+.btn-accent:hover{
   background-color: #d66926;
 }
+/*.hidden{
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+   border: 0;
+}*/
 
  .header{
    position: relative;
@@ -609,19 +635,120 @@ a{
 
  .header-content{
   position: relative;
-  
-
  }
+
  .header-content__title{
    margin: 0 0 53px 0;
    text-align: center;
  }
+
  .header-content__buttons{
    display: flex;
    justify-content: center;
  }
+
  .header-content__buttons .btn:first-of-type{
     margin-right: 20px;
  }
 
+.skills{
+  padding: 10px;
+  margin-bottom: 30px;
+}
 
+.skills__container{
+  display: grid;
+  grid-template-areas: "a1 a1 a2 a3" "a4 a5 a5 a6" "a7 a8 a9 a6";
+  grid-gap: 10px;
+  margin-bottom: 20px;
+}
+.skills__button{
+  display: flex;
+  justify-content: center;
+}
+ .skills-item{
+   position: relative;
+   background-color:#2d3651;
+   min-height: calc(33.333vh - 40px/3);
+   overflow: hidden;
+ }
+ .skills-item:hover .skills-item__overlay{
+opacity: 0.95 !important;
+}
+ .skills-item:hover .skills-item__image{
+transform: scale(1.1);
+}
+.skills-item:hover .skills-item__link{
+  color: #d66926;
+}
+
+.skills-item:nth-of-type(1){
+   grid-area: a1;
+}
+.skills-item:nth-of-type(2){
+  grid-area: a2;
+}
+.skills-item:nth-of-type(3){
+  grid-area: a3;
+}
+.skills-item:nth-of-type(4){
+  grid-area: a4;
+}
+.skills-item:nth-of-type(5){
+  grid-area: a5;
+}
+.skills-item:nth-of-type(6){
+  grid-area: a6;
+}
+.skills-item:nth-of-type(7){
+  grid-area: a7;
+}
+.skills-item:nth-of-type(8){
+  grid-area: a8;
+}
+.skills-item:nth-of-type(9){
+  grid-area: a9;
+}
+.skills-item__overlay{
+  position: absolute; 
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.8;
+  background-color: #2d3651;
+  transition: opacity 0.5s;
+}
+.skills-item__image{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(../img/img-html.png);
+  background-position: 50% 50%;
+  background-size: cover;
+  transition: transform 0.5s;
+}
+.skills-item__title{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  margin: 0;
+}
+.skills-item__link{
+  display: flex;
+  padding: 20px;
+
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  letter-spacing: 0.1em;
+  transition: color 0.5s;
+}
