подготовка блоков skills и header к back-end

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,7 +544,7 @@ a{
    position: relative;
    min-height: 100vh;
    background-color: #2d3651;
-   background-image: url(../img/img-header.png);
+   /*background-image: url(../img/img-header.png);*/
    background-position: 50% 50%;
    background-size: cover;
    color: #ffffff;
@@ -559,8 +559,8 @@ a{
    right: 0;
    bottom: 0;
    left: 0;
-   opacity: 0.8;
-   background-color: #2d3651;
+   /*opacity: 0.8;
+   background-color: #2d3651;*/ 
    
  }
  .header-menu{
@@ -716,8 +716,9 @@ transform: scale(1.1);
   bottom: 0;
   left: 0;
   z-index: 1;
-  opacity: 0.8;
-  background-color: #2d3651;
+  /*opacity: 0.8;
+  background-color: #2d3651;*/
+  
   transition: opacity 0.5s;
 }
 .skills-item__image{
@@ -726,7 +727,7 @@ transform: scale(1.1);
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: url(../img/img-html.png);
+  /*background-image: url(../img/img-html.png);*/
   background-position: 50% 50%;
   background-size: cover;
   transition: transform 0.5s;
