--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,9 +494,29 @@ h1{
   letter-spacing: 0.08em;
   line-height: 1.2em;
 }
+h2{
+  font-family: "Roboto Slab", serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  letter-spacing: 0.1em;
+  line-height: 1.2em;
+  color: #2d3651;
+  margin-bottom: 56px;
+}
+
 a{
   text-decoration: none;
   color: #ffffff;
+}
+p{
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1.125rem;
+  letter-spacing: 0.063em;
+  line-height: 1.5em;
+  color: #637588;
+  margin-bottom: 18px;
+  display: block;
 }
 
 .btn-accent,
@@ -580,7 +600,8 @@ a{
 
 
 .header-menu__container,
-.header-content__container{
+.header-content__container,
+.article__container{
   padding-left: 20px;
   padding-right: 20px;
   max-width: 1340px ;
@@ -752,4 +773,18 @@ transform: scale(1.1);
   font-size: 1.25rem;
   letter-spacing: 0.1em;
   transition: color 0.5s;
+}
+.article{
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #e5e5e5;
+}
+.article__container{
+  display: grid;
+}
+.article__content{
+
+}
+.article__image{
+  
 }
