--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,6 +501,7 @@ h2{
   letter-spacing: 0.1em;
   line-height: 1.2em;
   color: #2d3651;
+  margin-top: 0;
   margin-bottom: 56px;
 }
 
@@ -512,31 +513,29 @@ p{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 1.125rem;
-  letter-spacing: 0.063em;
-  line-height: 1.5em;
+  /*letter-spacing: 0.055em;*/
+  line-height: 1.15em;
   color: #637588;
-  margin-bottom: 18px;
-  display: block;
+  /*margin-bottom: 18px;
+  display: block;*/
 }
-
+/*:focus{
+  outline-style: none;
+}*/
+.btn{
+  border: 2px solid #ffffff;
+  min-width: 250px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
 .btn-accent,
 .btn{
-  
-  
   height: 60px;
   display: block;
   text-align: center;
   font-size: 1.125rem;
   padding: 18px 20px;
-  
   letter-spacing: 0.1em;
   transition: background-color 0.5s;
-}
-
-.btn{
-  border: 2px solid #ffffff;
-  min-width: 250px;
-  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .btn-accent{
@@ -546,8 +545,24 @@ p{
 }
 
 .btn:hover,
-.btn-accent:hover{
+.btn:focus,
+.btn-accent:hover
+{
   background-color: #d66926;
+}
+.form .btn--modif{
+  color: #ffffff;
+  width: 100%;
+  border-color: rgb(45, 54, 81, 0.15);
+  border-bottom-color:  rgba(255, 255, 255, 0.5);;
+  
+}
+.form .btn--modif:hover,
+.form .btn--modif:focus{
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  background-color:  #d66926;
+  
 }
 /*.hidden{
   position: absolute;
@@ -559,7 +574,12 @@ p{
   padding: 0;
    border: 0;
 }*/
-
+.input{
+  margin: 0;
+  font-family: sans-serif;
+  line-height: 1.15;
+  overflow: visible;
+}
  .header{
    position: relative;
    min-height: 100vh;
@@ -601,7 +621,8 @@ p{
 
 .header-menu__container,
 .header-content__container,
-.article__container{
+.article__container,
+.form__container{
   padding-left: 20px;
   padding-right: 20px;
   max-width: 1340px ;
@@ -778,13 +799,74 @@ transform: scale(1.1);
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #e5e5e5;
+  letter-spacing: 0.055em;
 }
 .article__container{
   display: grid;
+  grid-template-columns: 1fr 271px;
+  grid-gap: 100px;
 }
-.article__content{
+
+.article__content p:first-of-type{
+  position: relative;
+  margin-top: -5px;
+  margin-bottom: 18px;
+}
+.article__content p:first-of-type::after{
+  position: absolute;
+  top: 0;
+  right: -50px;
+  content: "";
+  width: 2px;
+  height: 200px;
+  background-color: rgba(112, 112, 112, 0.1);
+  /*border: 2px  solid rgba(112, 112, 112 0.1);*/
+}
+.article__content p:last-of-type{
+  margin: 0;
+}
+.article__image{   
+  display: grid;
+  align-content: center;
+  justify-items: center;
 
 }
-.article__image{
+.article__image img{
+    max-width: 100%;
+  max-height: 480px;
+}
+.form{
+  padding: 30px;
+  background-color: #2d3651 ;
+}
+.form__container{
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3,1fr);
+}
+.form-item__input{
+  display: block;
+  width: 100%;
+  height: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.05);
+  font-size: 1.125rem;
+  transition: border-color 0.5s, background-color 0.5s;
+}
+
+.form-item__input:hover,
+.form-item__input:focus
+{
+  border-color: rgba(255, 255, 255, 0.15);
+  border-bottom-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.15);
+  outline: none;
   
 }
+
+
