--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -504,6 +504,9 @@ h2{
   margin-top: 0;
   margin-bottom: 56px;
 }
+h3{
+  color: #000000;
+}
 
 a{
   text-decoration: none;
@@ -704,7 +707,8 @@ p{
   grid-gap: 10px;
   margin-bottom: 20px;
 }
-.skills__button{
+.skills__button,
+.posts__button{
   display: flex;
   justify-content: center;
 }
