--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,8 @@
+@mixin abs-position {
+  
+}
+
+
 @mixin text-shortener {
   display: block;
   overflow: hidden;
@@ -42,4 +47,4 @@
   padding: 0;
 
   border: 0;
-}
+}
