--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -2,46 +2,46 @@
     box-sizing: border-box;
   }
   html{
-    font-size: 16px;
-    font-family: "Roboto", sans-serif;/*просмтреть шрифты*/
+    font-size: $font-size;
+    font-family: $font-main;
     overflow-y: scroll;
     /*letter-spacing: 0.1em;*/
   }
  h1{
-   font-family: "Roboto Slab", serif;
+   font-family: $font-header;
    font-weight: 300;
    font-size: 3.75rem;
    letter-spacing: 0.08em;
    line-height: 1.2em;
  }
  h2{
-   font-family: "Roboto Slab", serif;
+   font-family: $font-header;
    font-weight: 700;
    font-size: 2.5rem;
    letter-spacing: 0.1em;
    line-height: 1.2em;
-   color: #2d3651;
+   color: $color-primary;
    margin-top: 0;
    margin-bottom: 56px;
  }
  h3{
    letter-spacing: 0.05em;
-   color:#637588;
+   color: $color-gray;
    font-size: 1.125em;
    
  }
  
  a{
    text-decoration: none;
-   color: #ffffff;
+   color: $color-light;
  }
  p{
-   font-family: "Roboto", sans-serif;
+   font-family: $font-main;
    font-weight: 400;
    font-size: 1.125rem;
    /*letter-spacing: 0.055em;*/
    line-height: 1.15em;
-   color: #637588;
+   color: $color-gray;
    /*margin-bottom: 18px;*/
  }
  img{
@@ -55,32 +55,38 @@
    display: block;
    text-align: center;
    font-size: 1.125rem;
-   /*padding: 18px 20px;*/
+   /*padding: 18px $gap;*/
    letter-spacing: 0.1em;
    transition: background-color 0.5s;
+
+   &:focus,
+   &:active,
+   &:hover{
+    background-color: $color-accent;
+   }
  }
  .btn{
    height: 60px;
-   padding: 18px 20px;
-   border: 2px solid #ffffff;
+   padding: 18px $gap;
+   border: 2px solid $color-light;
    min-width: 250px;
    background-color: rgba(255, 255, 255, 0.1);
  }
  
  .btn-accent{
    height: 60px;
-   padding: 18px 20px;
-   border: 2px solid #2d3651;
+   padding: 18px $gap;
+   border: 2px solid $color-primary;
    min-width: 350px;
    background-color: rgba(45, 54, 81, 0.8);
  }
  
- .btn:hover,
+/* .btn:hover,
  .btn:focus,
  .btn-accent:hover
  {
-   background-color: #d66926;
- }
+   background-color: $color-accent;
+ }*/
        /*.hidden{
         position: absolute;
         overflow: hidden;
@@ -93,7 +99,7 @@
       }*/
       .input{
         margin: 0;
-        font-family: sans-serif;
+        font-family: $font-main;
         /*font-family: inherit;*/
         line-height: 1.15;
         overflow: visible;
