--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -2,17 +2,16 @@
     font-size: 1.5rem;
     letter-spacing: 0.22em;
     align-self: center;
-  }
-  
-  .header-logo__link{
-    display: block;
-    padding: 20px 20px 20px 0;
-  }
-  
-  
-   .header-logo__accent{
+
+    &__link{
+      display: block;
+      padding: $gap $gap $gap 0;
+    }
+    &__accent{
       border: 3px solid #d63c29;
       padding: 14px 1px 13px 5px;
       display: inline-block;
       margin-right: 4px;
-   }
+    }
+  }
+  
