--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -4,19 +4,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    
-   }
-  
-   .header-menu__container{
+
+    &__container{
      display: grid;
      grid-template-columns: auto 1fr;
      /*align-items: center;*/
-   }
 
-   .header-menu__container,
-   .header-content__container{
-    padding-left: 20px;
-    padding-right: 20px;
-    max-width: 1340px ;
-    margin: auto;
+     @extend %container;
+    }
+    
+    
    }
