--- a/assets/scss/header/_header-overlay.scss
+++ b/assets/scss/header/_header-overlay.scss
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    /*opacity: 0.8;
-    background-color: #2d3651;*/ 
+    opacity: 0.8;
+    background-color: $color-primary; 
     
   }
