--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -1,11 +1,11 @@
 .header{
     position: relative;
     min-height: 100vh;
-    background-color: #2d3651;
+    background-color: $color-primary;
     /*background-image: url(../img/img-header.png);*/
     background-position: 50% 50%;
     background-size: cover;
-    color: #ffffff;
+    color: $color-light;
     padding: 100px 0;
     display: grid;
     align-content: center;
